fix nav gap

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -421,7 +421,7 @@ footer {
         max-width: 100%;
     }
     .title {
-        margin-left: 50px;
+        margin-left: 40px;
         h1 {
             font-size: 80px;
         }
@@ -433,7 +433,7 @@ footer {
         padding: 18px;
         ul {
             // flex-direction: column;
-            gap: 20px;
+            gap: 10px;
             a {
                 padding: 18px;
                 font-size: 22px;
